# jChat

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  chat.patch  credentials.example.toml  credentials.toml.example  index.html  irc-resp.txt  messages.txt  response.txt  script.js  settings.js  utils.js
chat/: .gitignore  index.html  script.js  settings.js  utils.js
chat-old/: .gitignore  README.md  index.html
chat-old/styles/: font_DancingScript.css  font_Impact.css  font_Lato.css  font_NotoSans.css  font_PressStart2P.css  font_SegoeUI.css  font_SourceCodePro.css  font_Wallpoet.css  size_large.css  stroke_medium.css  stroke_thick.css  stroke_thicker.css  style.css
chat-old/v2/: index.html
chat/styles/: font_BalooTammudu.css  font_Comfortaa.css  font_DancingScript.css  font_Impact.css  font_IndieFlower.css  font_Lato.css  font_Roboto.css  font_SegoeUI.css  font_SourceCodePro.css  shadow_large.css  shadow_medium.css  shadow_small.css  size_large.css  size_medium.css  size_small.css  stroke_thick.css  stroke_thicker.css  stroke_thin.css  variant_SmallCaps.css
chat/v2/: index.html  irc-message.js  script.js  tinycolor.js  (+3 more)
patches/: jChat.patch
scripts/: patch.py  setup.py
src/: command.rs  creds.rs  irc.rs  lib.rs  main.rs  twitch.rs  twitch_api.rs
styles/: font_Comfortaa.css  font_IndieFlower.css  font_NotoSans.css  font_PressStart2P.css  font_Wallpoet.css  shadow_large.css  shadow_small.css  size_large.css  size_medium.css  size_small.css  stroke_medium.css  style.css  style_large.css  style_medium.css  style_small.css  variant_SmallCaps.css
v2/: credentials.js  index.html  script.js  utils.js
(+38 files in other folders)
