[package]
name = "fauxchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-irc = "0.0.1"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
anyhow = "1.0.66"
const_format = "0.2.30"
crossbeam = "0.8.2"
directories = "4.0.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.6.0"
reqwest = { version = "0.11.13", features = ["json", "into_future"], git = "https://github.com/jewlexx/reqwest.git" }
rotenv_codegen = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
rotenv_codegen = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
